Knife Project: executing Link select afterwards will result in crash #68852

Closed
opened 2019-08-20 04:10:12 +02:00 by Leroy · 7 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]
If you did knife project, than do link select(press L), the blender will crash. sorry my poor English.

Exact steps for others to reproduce the error

  1. download my .blnd file, or you make a new one.
  2. select circle, than press shift select plane.
  3. press Tab key switch to edit mode.
  4. press F3 search Knife Project, and press Enter to execute it.
  5. Click anywere by RMB( or LMB select) to deselect.
  6. move the cursor on the plane, than press L key to select plane.
  7. crash and close automatic

you can see gif here:

crash.gif

[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

.blend file
linkSlectCrash.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] If you did knife project, than do link select(press L), the blender will crash. sorry my poor English. **Exact steps for others to reproduce the error** 1. download my .blnd file, or you make a new one. 2. select circle, than press shift select plane. 3. press Tab key switch to edit mode. 4. press F3 search Knife Project, and press Enter to execute it. 5. Click anywere by RMB( or LMB select) to deselect. 6. move the cursor on the plane, than press L key to select plane. 7. crash and close automatic you can see gif here: ![crash.gif](https://archive.blender.org/developer/F7674175/crash.gif) [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] .blend file [linkSlectCrash.blend](https://archive.blender.org/developer/F7674165/linkSlectCrash.blend)
Author

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie

Added subscriber: @AbidMaqbool

Added subscriber: @AbidMaqbool

Can confirm the bug report.

In Blender 2.8 stable & also daily build 2.81, crash with exact same steps...

Try with:

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: AMD Radeon HD 8400 / R3 Series ATI Technologies Inc. 4.5.13399 Core Profile Context 15.200.1065.0

Blender Version
Broken: version: 2.81 (sub 2), branch: master, commit date: 2019-08-19 19:05, hash: 74d05eb71a

Can confirm the bug report. In `Blender 2.8 stable` & also `daily build 2.81`, crash with exact same steps... # Try with: **System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: AMD Radeon HD 8400 / R3 Series ATI Technologies Inc. 4.5.13399 Core Profile Context 15.200.1065.0 **Blender Version** Broken: version: 2.81 (sub 2), branch: master, commit date: 2019-08-19 19:05, hash: 74d05eb71a
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking....
note: not sure this is intentional, but executing knife project seems to change from vertex select to edge select?

Confirmed, checking.... note: not sure this is intentional, but executing knife project seems to change from vertex select to edge select?
Philipp Oeser self-assigned this 2019-08-20 10:39:29 +02:00

This issue was referenced by 6f4e595e9b

This issue was referenced by 6f4e595e9ba9d7ac79873a1dc0a98144e6f136cb
Philipp Oeser changed title from Link select make crash when after knife project to Knife Project: executing Link select afterwards will result in crash 2019-09-03 11:51:27 +02:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68852
No description provided.